Fix spacing style

--- a/practice-one/src/components/Product/product.css
+++ b/practice-one/src/components/Product/product.css
@@ -9,5 +9,5 @@
 .flex {
   display: flex;
   align-items: center;
-  gap: 10;
+  gap: 10px;
 }
